HSV & reiter + Norme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "stdio.h": "c",
         "limits": "c",
         "type_traits": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "math.h": "c"
     },
     "editor.insertSpaces": false,
     "editor.rulers": [80]
